syntax = "proto3";

package goakt.v1;

message ActorMeta {
  // Specifies the kind. This is basically the type of actor
  string actor_kind = 1;
  // Specifies the actor id
  string actor_id = 2;
  // Specifies the actor interface type
  bytes actor_type = 3;
}

// NodeState holds the node internal state
// Each Node hosting a single actor system has a state that depicts the actual state of the Actor system.
// Having that state helps replicate it across the cluster. In case a node goes down we can easily replay that state on another
// node to get the system going
message NodeState {
  // Specifies the map between the node id and the various actor meta on that node
  map<string, ActorMeta> states = 1;
}

message Peer {
  // Specifies the peer unique id
  string id = 1;
  // Specifies the peer host and port
  string host_and_port = 2;
}
